clusters/k3s/apps/media/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: docker-services
spec:
  type: ClusterIP
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: jellyfin
  namespace: docker-services
  labels:
    kubernetes.io/service-name: jellyfin
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.40
ports:
  - port: 8096
    protocol: TCP
